feat: implemented the event api and created the initial design

--- a/apps/frontend/src/app/app.html
+++ b/apps/frontend/src/app/app.html
@@ -3,7 +3,7 @@
   [class.dark]="themeService.isDarkMode()"
 >
   <div
-    class="absolute inset-0 bg-gradient-to-r from-blue-500/10 to-purple-500/10 dark:from-blue-500/20 dark:to-purple-500/20"
+    class="fixed inset-0 bg-gradient-to-r from-blue-500/10 to-purple-500/10 dark:from-blue-500/20 dark:to-purple-500/20 pointer-events-none"
   ></div>
   <div class="relative">
     <div class="flex flex-col min-h-screen">
